--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <div class="p-5 md:p-8">
                                 <div class="mb-8 flex">
                                     <!-- Word Title Placeholder -->
-                                    <h1 class="flex-1"><a class="word text-denim font-bold font-serif dark:text-fluorescent break-all text-3xl md:text-[2.75rem] md:leading-10" href="/define.php?term=placeholder" id="definition-word">🗿</a></h1>
+                                    <h1 class="flex-1"><a class="word text-denim font-bold font-serif dark:text-fluorescent break-all text-3xl md:text-[2.75rem] md:leading-10" href="https://www.urbandictionary.com/define.php?term=placeholder" id="definition-word">🗿</a></h1>
                                     <div>
                                         <div class="relative">
                                             <!-- Share Button - Keeping -->
