--- a/index.html
+++ b/index.html
@@ -338,19 +338,19 @@
                                     <p>"He spent ten minutes <strong>tehzeening</strong> his new pair of denim."</p>
                                 </div>
                                 <!-- Contributor -->
-                                <div class="contributor font-bold" id="definition-contributor">by TehzeenFan, October 26, 2023</div> <!-- Placeholder contributor/date -->
+                                <div class="contributor font-bold" id="definition-contributor">by janis fayaaz, October 26, 2023</div> <!-- Placeholder contributor/date -->
 
                                 <div class="mt-5 md:mt-8 flex justify-between">
                                     <div class="flex items-center">
                                         <!-- Like Button - Modified for visual feedback only -->
                                         <button aria-label="Vote up this definition" class="relative flex items-center border shadow-sharp border-black dark:border-white p-3 pr-2 pl-4 rounded-tl-3xl rounded-bl-3xl hover:bg-limon-lime dark:hover:bg-fluorescent active:translate-y-0 5 justify-center min-w-[9ch]" onclick="this.classList.toggle('bg-limon-lime')">
                                             <svg class="fill-current" height="16" viewBox="0 0 34 34" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M34 15c0-2-1-3-3-3H21l2-8-1-2-2-2-10 11-1 3v17c0 2 2 3 3 3h14l3-2 5-12v-5zM0 34h6V14H0v20z"></path></svg>
-                                            <span class="text-xs font-bold ml-2" id="thumb-up-count">5</span> <!-- Placeholder count -->
+                                            <span class="text-xs font-bold ml-2" id="thumb-up-count">1.5k</span> <!-- Placeholder count -->
                                         </button>
                                         <!-- Dislike Button - Modified for visual feedback only -->
                                         <button aria-label="Vote down this definition" class="relative flex items-center border shadow-sharp border-black dark:border-white border-l-0 p-3 pl-2 pr-4 rounded-tr-3xl rounded-br-3xl hover:bg-limon-lime dark:hover:bg-fluorescent active:translate-y-0 5 justify-center min-w-[9ch]" onclick="this.classList.toggle('bg-limon-lime')">
                                             <svg class="fill-current" height="16" viewBox="0 0 34 34" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M28 0v20h6V0h-6zm-6 0H8L5 2 0 14v5c0 2 1 3 3 3h10l-2 8 1 2 2 2 10-11 1-3V3l-3-3z"></path></svg>
-                                            <span class="text-xs font-bold ml-2" id="thumb-down-count">1</span> <!-- Placeholder count -->
+                                            <span class="text-xs font-bold ml-2" id="thumb-down-count">10</span> <!-- Placeholder count -->
                                         </button>
                                     </div>
                                     <!-- Flag Button - Updated defid -->
@@ -380,7 +380,7 @@
                                     </div>
                                     <div aria-label="Animation of a squirrel eating" class="flex rounded-full w-32 h-32 bg-cover shadow-sharp border border-black" role="img" style="background-image: url('images/100.webp')"></div>
                                 </div>
-                                <a class="flex items-center justify-center bg-denim text-white w-full font-bold p-4 rounded-full hover:text-limon-lime focus:outline-none active:translate-y-0 5" href="/add.php">
+                                <a class="flex items-center justify-center bg-denim text-white w-full font-bold p-4 rounded-full hover:text-limon-lime focus:outline-none active:translate-y-0 5" href="https://www.urbandictionary.com/add.php">
                                     <svg class="fill-current" height="16" viewBox="0 0 48 48" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M43 20H29V5a4 4 0 1 0-9 0v15H6a4 4 0 0 0-4 4 4 4 0 0 0 1 3 4 4 0 0 0 3 1h14v14a4 4 0 0 0 1 3 4 4 0 0 0 3 2 4 4 0 0 0 5-5V28h14a4 4 0 0 0 0-8z"></path></svg>
                                     <span class="ml-2">Define a Word</span>
                                 </a>
